fluorescent/packages/fluorescent_vulkan/src/fluorescent_vulkan.h

#ifndef FLUORESCENT_VULKAN_H
#define FLUORESCENT_VULKAN_H

#include <stdint.h>
#include <stdbool.h>

#ifdef _WIN32
#define EXPORT __declspec(dllexport)
#else
#define EXPORT __attribute__((visibility("default"))) __attribute__((used))
#endif

#ifdef __cplusplus
extern "C" {
#endif

// Initialize the Vulkan engine. Returns true on success.
EXPORT bool init_vulkan();

// Initialize the Vulkan device. Returns true on success.
EXPORT bool init_vulkan_device();

// Stubs the graphics pipeline creation
EXPORT bool init_graphics_pipeline();

// Renders a frame. 
EXPORT void render_frame();

// Clean up resources.
EXPORT void cleanup_vulkan();

// Updates the view-projection matrix from the ECS camera
EXPORT void update_camera(const float* view_proj_matrix);

#ifdef __cplusplus
}
#endif

// Provides access to the Vulkan Device for Android specific extensions (like AHardwareBuffer)
#ifdef __cplusplus
#include <vulkan/vulkan.h>
VkDevice get_vulkan_device();
VkPhysicalDevice get_vulkan_physical_device();

// Returns the global render pass created by init_graphics_pipeline()
VkRenderPass get_vulkan_render_pass();
VkPipeline get_vulkan_graphics_pipeline();
VkPipelineLayout get_vulkan_pipeline_layout();
VkCommandPool get_vulkan_command_pool();
VkQueue get_vulkan_graphics_queue();
VkDescriptorSet get_vulkan_descriptor_set();
#endif

#endif // FLUORESCENT_VULKAN_H